added edit functionality

--- a/js_pactice/main_page/index.html
+++ b/js_pactice/main_page/index.html
@@ -23,45 +23,45 @@
       <th class="table__row__title">Edit</th>
       <th class="table__row__title">Remove</th>
     </tr>
-    <tr class="table__row">
+    <tr class="table__row" data-id="1">
       <td class="table__row__content number">1</td>
       <td class="table__row__content">Bjorn</td>
       <td class="table__row__content">Kanwell</td>
       <td class="table__row__content">bkanwell0@eepurl.com</td>
       <td class="table__row__content">Yudong</td>
       <td class="table__row__content">Bergstorm</td>
-      <td class="table__row__content"><button class="edit" >Edit</button></td>
+      <td class="table__row__content"><button class="edit" data-id="1">Edit</button></td>
       <td class="table__row__content"><button class="remove">Remove</button></td>
       
     </tr>
-    <tr class="table__row">
+    <tr class="table__row" data-id="2">
       <td class="table__row__content number">2</td>
       <td class="table__row__content">Milli</td>
       <td class="table__row__content">Finkle</td>
       <td class="table__row__content">mfinkle1@i2i.jp</td>
       <td class="table__row__content">Tiznit</td>
       <td class="table__row__content">Feeney LLC</td>
-      <td class="table__row__content"><button class="edit">Edit</button></td>
+      <td class="table__row__content"><button class="edit" data-id="2">Edit</button></td>
       <td class="table__row__content"><button class="remove">Remove</button></td>
     </tr>
-    <tr class="table__row">
+    <tr class="table__row" data-id="3">
       <td class="table__row__content number">3</td>
       <td class="table__row__content">Martelle</td>
       <td class="table__row__content">Bambrugh</td>
       <td class="table__row__content">mbambrugh2@fda.gov</td>   
       <td class="table__row__content">Casma</td>
       <td class="table__row__content">Cole</td>
-      <td class="table__row__content"><button class="edit">Edit</button></td>
+      <td class="table__row__content"><button class="edit" data-id="3">Edit</button></td>
       <td class="table__row__content"><button class="remove">Remove</button></td>
     </tr>
-    <tr class="table__row">
+    <tr class="table__row" data-id="4">
       <td class="table__row__content number">4</td>
       <td class="table__row__content">Evangelina</td>
       <td class="table__row__content">Adamo</td>
       <td class="table__row__content">eadamo3@studiopress.com</td>
       <td class="table__row__content"> HuangJingba</td>
       <td class="table__row__content">Botsford LLC</td>
-      <td class="table__row__content"><button class="edit">Edit</button></td>
+      <td class="table__row__content"><button class="edit" data-id="4">Edit</button></td>
       <td class="table__row__content"><button class="remove">Remove</button></td>
     </tr>
    </table>
@@ -88,7 +88,7 @@
       </div>
     </div>
   </footer>
-  <script  src="/home/alexandr/Desktop/html_css_js/js_pactice/js/main_script.js" ></script>
+  <script  src="/home/alexandr/Desktop/html_css_js/myFirstRepos/js_pactice/js/main_script.js" ></script>
   
   </body>
 </html>
