--- a/js_pactice/main_page/index.html
+++ b/js_pactice/main_page/index.html
@@ -84,7 +84,10 @@
         <input type="text" name="" id="" class="info company" placeholder="Enter name of company">
       </div>
       <div class="button">
-        <button class="submit">Submit</button>
+        <button class="submit1">Submit</button>
+      </div>
+      <div class="button">
+        <button class="submit2">Submit</button>
       </div>
     </div>
   </footer>
